fixed orentation change update on mobile, tweaked mobile css

--- a/public/css/styleMobile.css
+++ b/public/css/styleMobile.css
@@ -284,7 +284,7 @@
   .gameButtonContainer{
     bottom: 0;
     left: 0;
-    height: 50%;
+    height: calc(((var(--vh, 1vh) * 100)  - var(--topBarWidth)  - var(--topBarWidth)) * .33);
     z-index: 10;
     touch-action: manipulation;
   }
@@ -304,7 +304,7 @@
   }
   .dpadButtonContainer{
     width: 100%;
-    max-width: calc(((var(--vh, 1vh) * 100) - var(--topBarWidth) / 2) * .5);
+    max-width: calc(((var(--vh, 1vh) * 100) - var(--topBarWidth) / 2) * .4);
     max-height: 100%;
     aspect-ratio: 1/1;
     align-self: center;
